sumo/tests/netgen/grid/errors/grid_y_length__9_9/options.netgen
--grid --grid.number=10 --grid.y-length=9.9 --output-file=net.net.xml
